--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,4 @@
-﻿* { 
+* { 
 margin: 0 0 0 0;
 padding: 0 0 0 0;
 }
@@ -6,8 +6,8 @@ body {
 font-size:14px;
 font-family: "arial", "helvetica", sans-serif;
 overflow:hidden;
-padding-right:4px;
-padding-top:4px;
+padding-right:5px;
+padding-top:0px;
 }
 fieldset{
 border: none;
@@ -15,6 +15,9 @@ border: none;
 textarea { 
 font-family: "consolas", "Terminus", "lucida console", "courier new", "courier", monospace;
 font-size: 12px;
+}
+label {
+text-align:center;
 }
 button {
 background:#eee;
@@ -32,8 +35,8 @@ border-top-color:#ccc;
 border-top-style:solid;
 border-top-width:1px;
 cursor:pointer;
-margin-top:2px;
+margin-top:0px;
+margin-bottom:7px;
 width:100%
 }
-
 #makereadable:lang(ru){content: 'Сделать читабельным';/*Make readable*/}
